<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:padding="@dimen/activity_horizontal_margin"
		    android:background="@android:color/white"
		    android:orientation="vertical">
		    <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp">
		        <ImageView 
		            android:id="@+id/img1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/findlaw_detail_head"/>
		        <LinearLayout 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_toRightOf="@id/img1"
		            android:layout_marginLeft="5dp"
		            android:layout_centerVertical="true"
		            android:orientation="vertical">
		            <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="@string/find_law"
			            android:textColor="@color/text_dark_color"
			    		android:textSize="@dimen/tv_style_big_size"/>
			        <TextView 
			            android:id="@+id/findlaw_detail_count_tv"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginTop="5dp"
			            android:textColor="#83b835"
			            android:visibility="invisible"
			            android:textSize="@dimen/tv_style_smal_size"
			            android:text="@string/find_law_count"/>
		        </LinearLayout>
		    </RelativeLayout>
		    <include layout="@layout/h_line"/>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:textColor="@color/text_dark_color"
			    android:textSize="@dimen/tv_style_big_size"
		        android:text="@string/find_law_service"/>
		    <LinearLayout 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal"
		        android:layout_marginTop="5dp">
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="@color/text_dark_color"
		            android:textSize="@dimen/tv_style_smal_size"
		            android:text="@string/find_law_request"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textColor="#83b835"
			        android:textSize="@dimen/tv_style_smal_size"
			        android:layout_marginLeft="5dp"
			        android:text="@string/find_law_free_unlimit"/>
		    </LinearLayout>
		    <TextView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="5dp"
		        android:text="@string/find_law_detail_remark2"/>
		</LinearLayout>
		<include layout="@layout/h_line"/>
		
		<LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="20dp"
		    android:orientation="vertical"
		    android:background="@drawable/dialog_btn_selector"
		    android:onClick="lawDetail">
		    <include layout="@layout/h_line"/>
		   <RelativeLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:padding="@dimen/activity_horizontal_margin">
		        <com.aframe.ui.widget.CircleImageView
		            android:id="@+id/findlaw_detail_head_img"
		            android:layout_width="@dimen/head_width"
		            android:layout_height="@dimen/head_height"
		            android:src="@drawable/head_default"/>
		        <ImageView
		            android:id="@+id/img2"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:src="@drawable/go_more"
		            android:layout_alignParentRight="true"
		            android:layout_centerVertical="true"/>
		        <LinearLayout 
		            android:id="@+id/lt1"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:layout_marginLeft="5dp"
		            android:layout_marginRight="5dp"
		            android:layout_toRightOf="@id/findlaw_detail_head_img"
		            android:layout_toLeftOf="@id/img2">
		            <TextView 
		                android:id="@+id/findlaw_detail_name_tv"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textColor="@color/text_dark_color"
			    		android:textSize="@dimen/tv_style_big_size"/>
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:textColor="@color/text_light_color"
			    		android:textSize="@dimen/tv_style_mini_size"
			            android:text="@string/law"/>
		        </LinearLayout>
		        <LinearLayout 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal"
		            android:layout_marginTop="5dp"
		            android:layout_marginLeft="5dp"
		            android:layout_marginRight="5dp"
		            android:layout_below="@id/lt1"
		            android:layout_toRightOf="@id/findlaw_detail_head_img">
		            <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:visibility="gone"
			            android:textColor="@color/text_dark_color"
			            android:textSize="@dimen/tv_style_smal_size"
			            android:text="@string/find_law_lawspecial"/>
		            <TextView 
		                android:id="@+id/findlaw_detail_room_tv"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="广州刚广州刚广州刚广州广刚广州刚广州刚广州广刚广州刚广州刚广州广刚广州刚广州刚广州广州刚"
			            android:singleLine="true"
			            android:textColor="@color/text_dark_color"
			            android:textSize="@dimen/tv_style_mini_size"/>
		        </LinearLayout>
		    </RelativeLayout>
		    <include layout="@layout/h_line"/>
		</LinearLayout>
		<Button 
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:layout_marginLeft="20dp"
		    android:layout_marginRight="20dp"
		    android:onClick="bookLaw"
		    android:text="拨打电话"/>
	</LinearLayout>
</ScrollView>