<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:ripple="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
		  android:id="@+id/toolbar"
		  android:layout_height="wrap_content"
		  android:layout_width="match_parent"
		  android:background="?attr/colorPrimary"
		  android:minHeight="?attr/actionBarSize"> 
		  <include layout="@layout/main_toolbar_layout"/>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
	</android.support.v7.widget.Toolbar>
	<FrameLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:layout_below="@id/toolbar" >
	  	<LinearLayout
	  	    android:id="@+id/fragmentRoot"
	  	    android:layout_width="match_parent"
	  	    android:layout_height="match_parent"
	  	    android:orientation="vertical"
	  	    android:paddingBottom="60dp" />
	    <RelativeLayout 
	        android:id="@+id/bottomList"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="bottom">
	        <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:orientation="vertical">
		        <View 
		            android:layout_width="match_parent"
		            android:layout_height="1px"
		            android:background="@color/space_line_color"/>
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="horizontal">
		            <LinearLayout
			             android:id="@+id/home_lt"
			             style="@style/main_bottom_item"
			             android:gravity="center"
			             android:onClick="goHome">
			             <RadioButton
			                 android:id="@+id/rbHome"
			                 style="@style/footbar"
			                 android:layout_width="wrap_content"
			                 android:layout_height="fill_parent"
			                 android:layout_gravity="center_horizontal"
			                 android:drawableTop="@drawable/main_menu_home_selector"
			                 android:paddingTop="8dp"
			                 android:text="@string/home"
			                 android:checked="true" 
			                 android:background="#00000000"
			                 android:clickable="false"/>
			         </LinearLayout>
			         <LinearLayout
			             android:id="@+id/find_lt"
			             style="@style/main_bottom_item"
			             android:gravity="center"
			             android:onClick="goFind">
			             <RadioButton
			                 android:id="@+id/rbFind"
			                 style="@style/footbar"
			                 android:layout_width="wrap_content"
			                 android:layout_height="fill_parent"
			                 android:layout_gravity="center_horizontal"
			                 android:drawableTop="@drawable/main_menu_find_selector"
			                 android:paddingTop="8dp"
			                 android:text="@string/search"
			                 android:checked="true" 
			                 android:background="#00000000"
			                 android:clickable="false"/>
			         </LinearLayout>
			         <LinearLayout
			             android:id="@+id/mindle_lt"
			             style="@style/main_bottom_item"
			             android:gravity="center"
						 android:visibility="gone">
			         </LinearLayout>
			         <LinearLayout
			             android:id="@+id/article_lt"
			             style="@style/main_bottom_item"
			             android:gravity="center"
			             android:onClick="goArticle">
			             <RadioButton
			                 android:id="@+id/rbArticle"
			                 style="@style/footbar"
			                 android:layout_width="wrap_content"
			                 android:layout_height="fill_parent"
			                 android:layout_gravity="center_horizontal"
			                 android:drawableTop="@drawable/main_menu_article_selector"
			                 android:paddingTop="8dp"
			                 android:text="@string/article_list"
			                 android:checked="true" 
			                 android:background="#00000000"
			                 android:clickable="false"/>
			         </LinearLayout>
			         <LinearLayout
			             android:id="@+id/my_lt"
			             style="@style/main_bottom_item"
			             android:gravity="center"
			             android:onClick="goMy">
			             <RadioButton
			                 android:id="@+id/rbMy"
			                 style="@style/footbar"
			                 android:layout_width="wrap_content"
			                 android:layout_height="fill_parent"
			                 android:layout_gravity="center_horizontal"
			                 android:drawableTop="@drawable/main_menu_my_selector"
			                 android:paddingTop="8dp"
			                 android:text="@string/my"
			                 android:checked="true" 
			                 android:background="#00000000"
			                 android:clickable="false"/>
			         </LinearLayout>
		        </LinearLayout>
		    </LinearLayout>
		    <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:layout_marginBottom="10dp"
	            android:onClick="goAsk"
				android:visibility="gone"/>
	    </RelativeLayout>
	</FrameLayout>
	<ImageView 
	    android:id="@+id/tipview"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone"
        android:scaleType="fitXY"/>
</RelativeLayout>